# my_ai_memo_app

./: .env.example  .gitignore  Dockerfile  README.md  debug_startup.py  docker-compose.yml  pyproject.toml  run_app.py  server.py
.cursor/: mcp.json
.cursor/rules/: coding.mdc  project.mdc  prompt_tmplates.mdc  ui.mdc  workflow.mdc
src/backend/: api_server.py
src/frontend/: app.py
src/models/: database.py  memo.py
src/utils/: ai_processor.py  database_manager.py
